<?xml version="1.0" encoding="utf-8"?>
<!--
Dialog for editing the penalties applied to a solve time. This is the content
view for an ad hoc dialog that is created and shown within a "MaterialDialog"
by the "EditSolveDialog" fragment.
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <com.aricneto.twistytimer.layout.StrikeoutTextView
            android:id="@+id/time"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            app:strikeoutColor="@color/dnf_strikeout"
            tools:text="12:23.56"/>

        <View
            android:layout_column="0"
            android:layout_row="1"
            android:layout_columnSpan="2"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:background="@color/black_divider"/>

        <TextView
            android:layout_column="0"
            android:layout_row="2"
            android:layout_marginRight="8dp"
            android:textSize="16sp"
            android:text="@string/edit_penalties_inspection_label"/>

        <TextView
            android:id="@+id/pre_start_penalties"
            android:layout_column="1"
            android:layout_row="2"
            android:textSize="16sp"
            android:textColor="@color/red_material"
            tools:text="+2s"/>

        <View
            android:layout_column="0"
            android:layout_row="3"
            android:layout_columnSpan="2"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:background="@color/black_divider"/>

        <TextView
            android:layout_column="0"
            android:layout_row="4"
            android:layout_marginRight="8dp"
            android:textSize="16sp"
            android:text="@string/edit_penalties_solve_label"/>

        <TextView
            android:id="@+id/post_start_penalties"
            android:layout_column="1"
            android:layout_row="4"
            android:textSize="16sp"
            android:textColor="@color/red_material"
            tools:text="DNF + 3x2s"/>

        <LinearLayout
            android:id="@+id/penalty_button_panel"
            android:orientation="horizontal"
            android:layout_column="0"
            android:layout_row="5"
            android:layout_columnSpan="2"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/button_dnf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/edit_penalties_plus_dnf"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/button_plus_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/edit_penalties_plus_2"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/button_minus_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:enabled="false"
                android:padding="8dp"
                android:text="@string/edit_penalties_minus_2"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <View
            android:layout_column="0"
            android:layout_row="6"
            android:layout_columnSpan="2"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:background="@color/black_divider"/>

    </GridLayout>

</ScrollView>
