<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:keepScreenOn="true"
    app:umanoPanelHeight="0dp"
    app:umanoScrollableView="@id/solve_hints_panel"
    app:umanoShadowHeight="4dp"
    tools:context="com.aricneto.twistytimer.fragment.TimerFragment">

    <!--
    Enable "android:animateLayoutChanges", so that the quick-action buttons, statistics, hints,
    etc. will fade in and out nicely when their visibility is changed. It saves a lot of coding.
    Beware that if a view goes from "GONE" to "INVISIBLE" the transition may be animated! To avoid
    this, just use "VISIBLE" and "INVISIBLE" here in the layout and in the code, unless there is a
    real need to use "GONE".
    -->
    <RelativeLayout
        android:id="@+id/root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?mainColorBackground"
        android:animateLayoutChanges="true">

        <!-- The animated background shown when a personal best time is achieved. -->
        <com.skyfishjy.library.RippleBackground
            android:id="@+id/ripple_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false"
            app:rb_color="?colorAccent"
            app:rb_duration="3000"
            app:rb_radius="64dp"
            app:rb_rippleAmount="1"
            app:rb_scale="10" />

        <!--
        A proxy view that provides touch input to the "TimerWidget". This (nearly) full screen
        view will relay touch inputs to the timer making starting and (more importantly) stopping
        the timer much easier. This view is defined early, to ensure that it is "underneath" the
        foreground views and does not capture touches intended for those other views.

        The dimension "timer_touch_proxy_margin" will be applied in code when the timer is not
        running to pass through touch events when the user is (probably) only trying to open the
        side drawer menu. When the timer is running, all touch events will be intercepted, so
        touching the side of the screen will still stop the timer.
        -->
        <FrameLayout
            android:id="@+id/timer_touch_proxy"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!--
        The layout for the cross-hints panel and the scramble text view are very different between
        landscape and portrait orientations. There is no nice way to include them from their "merge"
        element and set the required "RelativeLayout" attributes on this "include" element, so the
        attributes are set within the included file. This is harder to maintain, but is unavoidable.
        -->
        <include
            layout="@layout/fragment_timer_x_hints_and_scramble" />

        <com.aricneto.twistytimer.timer.TimerWidget
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/timer_widget_tb_margin"
            android:layout_marginBottom="@dimen/timer_widget_tb_margin"

            app:normalTextColor="?colorTimerText"
            app:cueTextColor="?colorAccent"
            app:maxTimeHeight="@dimen/timer_widget_time_height" />

        <TextView
            android:id="@+id/congrats_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/timer"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:drawablePadding="16dp"
            android:gravity="center"
            android:text="@string/personal_best_message"
            android:textColor="?colorTimerText"
            android:textStyle="bold"
            android:visibility="invisible"
            tools:visibility="visible" />

        <LinearLayout
            android:id="@+id/quick_action_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/timer"
            android:gravity="center"
            android:animateLayoutChanges="true"
            android:visibility="invisible"
            tools:visibility="visible">

            <!--
            The quick-action buttons may show icons or text. There is a user preference to show
            larger buttons. The default icon size is 24x24 dp and the larger icon size is 36x36 dp.
            Setting the text size to 18 dp and 27 dp respectively gives acceptable results.
            -->
            <ImageView
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/ic_delete_white_24dp"
                android:tint="?colorTimerText"/>

            <TextView
                android:id="@+id/button_dnf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="+DNF"
                android:textSize="@dimen/qab_text_size_normal"
                android:textStyle="bold"
                android:textColor="?colorTimerText"/>

            <TextView
                android:id="@+id/button_plus_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:text="+2"
                android:textSize="@dimen/qab_text_size_normal"
                android:textStyle="bold"
                android:textColor="?colorTimerText"/>

            <TextView
                android:id="@+id/button_minus_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_vertical"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:enabled="false"
                android:padding="8dp"
                android:text="-2"
                android:textSize="@dimen/qab_text_size_normal"
                android:textStyle="bold"
                android:textColor="?colorTimerText"/>

            <ImageView
                android:id="@+id/button_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:padding="8dp"
                android:src="@drawable/ic_comment_white_24dp"
                android:tint="?colorTimerText"/>

        </LinearLayout>

        <!--
        The layout of the session statistics is 2-column for portrait and 1-column for landscape,
        so a separate layout is defined for each orientation and included here.
        -->
        <include
            layout="@layout/fragment_timer_stats"
            android:id="@+id/session_stats_panel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp" />

        <ImageView
            android:id="@+id/scramble_image"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_alignBottom="@id/session_stats_panel"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="8dp"
            android:scaleType="fitStart"
            tools:background="@color/red_material" />

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
            android:id="@+id/progress_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="16dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:mpb_progressStyle="circular"
            tools:background="@color/md_blue_500"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/expanded_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="gone" />

    </RelativeLayout>

    <ScrollView
        android:id="@id/solve_hints_panel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="8dp"
                android:drawableLeft="@drawable/ic_keyboard_arrow_down_black_18dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_down_black_18dp"
                android:gravity="center"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/panel_swipe_down_to_hide"
                android:textStyle="bold"/>

            <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/hintProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone"
                app:mpb_progressStyle="circular"/>

            <TextView
                android:id="@+id/hintProgressText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="16dp"
                android:text="@string/loading_hints"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/hintText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="top|left"
                android:padding="16dp"
                android:text=""
                android:textSize="16sp"/>

        </LinearLayout>

    </ScrollView>

</com.sothree.slidinguppanel.SlidingUpPanelLayout>
